--- a/sudoku.html
+++ b/sudoku.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="AI Sudoku - Play Sudoku with AI hints and multiple difficulty levels">
     <title>AI Sudoku</title>
-    <meta name="version" content="v1.9.4">
+    <meta name="version" content="v1.9.5">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⊞</text></svg>">
     <link rel="stylesheet" href="css/sudoku.css">
 </head>
 <body>
