--- a/gomoku.html
+++ b/gomoku.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="AI Gomoku - Play Gomoku (Five in a Row) against AI">
     <title>AI Gomoku</title>
-    <meta name="version" content="v1.9.10">
+    <meta name="version" content="v1.9.11">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>●</text></svg>">
     <link rel="stylesheet" href="css/gomoku.css">
 </head>
@@ -71,5 +71,8 @@
 
     <script src="js/games/gomoku.js"></script>
     <script src="js/gomoku-loader.js"></script>
+
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "746339ecce1c48f29195a33cd061b157"}'></script>
 </body>
 </html>
