--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="AI Games - Play Chess, Gomoku, and Sudoku against AI">
     <title id="pageTitle">AI Games</title>
-    <meta name="version" content="v1.9.10">
+    <meta name="version" content="v1.9.11">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎮</text></svg>">
     <link rel="stylesheet" href="css/style.css">
     <style>
@@ -131,5 +131,8 @@
     </script>
 
     <script src="js/platform.js"></script>
+
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "746339ecce1c48f29195a33cd061b157"}'></script>
 </body>
 </html>
