Fix Xiangqi: pieces on intersections, Chinese characters
- Change board to use intersections instead of cells
- Add proper grid lines (10 horizontal, 9 vertical)
- Add palace boxes for generals
- Use Chinese characters for all piece names
- Remove river text (楚河汉界)
- Red pieces always at bottom

--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
             cursor: pointer;
             transition: all 0.3s ease;
             border: 2px solid var(--game-color, #444);
-            min-width: 180px;
+            width: 180px;
+            height: 180px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
         }
 
         .game-card:hover {
